--- a/Riso.BlazorApp/Components/Layout/NavMenu.razor
+++ b/Riso.BlazorApp/Components/Layout/NavMenu.razor
@@ -31,6 +31,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="discount">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> discount
+            </NavLink>
+        </div>
     </nav>
 </div>
 
